// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <styled.span
    className="button neutral disabled"
    data-component-type="link_button"
  >
    testing testing 123
  </styled.span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <styled.span
    className="button neutral"
    data-component-type="link_button"
  >
    testing testing 123
  </styled.span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <styled.span
    className="button large neutral"
    data-component-type="link_button"
  >
    testing testing 123
  </styled.span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<Anchor
  href="#"
  onClick={[Function]}
>
  <styled.span
    className="button delete-subtle"
    data-component-type="link_button"
  >
    testing testing 123
  </styled.span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<Anchor
  href="test"
  onClick={[Function]}
>
  <styled.span
    className="button primary"
    data-component-type="link_button"
  >
    <span
      className="button-icon left"
      data-component-type="button_icon"
    >
      <FontAwesomeIcon
        icon="star"
        type="solid"
      />
    </span>
    Link Button with Icon
  </styled.span>
</Anchor>
`;

exports[`<LinkButton /> should render a link button with manual extra props for the anchor 1`] = `
<Anchor
  anchorComponentProps={
    Object {
      "someProp": false,
    }
  }
  href="test"
  onClick={[Function]}
>
  <styled.span
    className="button primary"
    data-component-type="link_button"
  >
    <span
      className="button-icon left"
      data-component-type="button_icon"
    >
      <FontAwesomeIcon
        icon="star"
        type="solid"
      />
    </span>
    Link Button with Icon
  </styled.span>
</Anchor>
`;
